# vim9-analyzer

./: Cargo.toml
src/: completion.rs  diagnotics.rs  main.rs  parser.rs  vim.pest
