[package]
name = "vim9-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.17.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.138"
serde_json = "1.0.82"
pest = "2.1.3"
pest_derive = "2.1.0"
ropey = "1.5.0"
dashmap = "5.3.4"
